--- a/src/SnIoGui/SnIoGui.csproj
+++ b/src/SnIoGui/SnIoGui.csproj
@@ -8,7 +8,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>3ffc4eca-efea-406a-ac9b-287d104967f4</UserSecretsId>
     <Version>0.1.0</Version>
+    <ApplicationIcon>gyeby.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="gyeby.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.6" />
