New feature: Read ApiKey and copy to clipboard.

--- a/src/SnIoGui/appsettings.json
+++ b/src/SnIoGui/appsettings.json
@@ -6,7 +6,9 @@
         "Name": "MyProject",
         "Url": "https://localhost:8080",
         "ApiKey": "........",
-        "ImportPath": "D:/import/myproject"
+        "ImportPath": "D:/import/myproject",
+        "DbServer": "localhost",
+        "DbName": "MyDatabase"
       }
     ]
   }
