--- a/src/SnIoGui/appsettings.json
+++ b/src/SnIoGui/appsettings.json
@@ -8,7 +8,8 @@
         "ApiKey": "........",
         "ImportPath": "D:/import/myproject",
         "DbServer": "localhost",
-        "DbName": "MyDatabase"
+        "DbName": "MyDatabase",
+        "AdminUrl": "https://localhost:8080/admin"
       }
     ]
   }
