--- a/src/SnIoGui/appsettings.json
+++ b/src/SnIoGui/appsettings.json
@@ -6,6 +6,7 @@
         "Name": "MyProject",
         "Url": "https://localhost:8080",
         "ApiKey": "........",
+        "HealthApiKey": "........",
         "ImportPath": "D:/import/myproject",
         "DbServer": "localhost",
         "DbName": "MyDatabase",
