--- a/src/SnIoGui/appsettings.json
+++ b/src/SnIoGui/appsettings.json
@@ -7,7 +7,8 @@
         "Url": "https://localhost:8080",
         "ApiKey": "........",
         "HealthApiKey": "........",
-        "ImportPath": "D:/import/myproject",
+        "ImportPath": "D:\\import\\myproject",
+        "ExportPath": "D:\\export",
         "DbServer": "localhost",
         "DbName": "MyDatabase",
         "AdminUrl": "https://localhost:8080/admin"
