--- a/src/SnIoGui/appsettings.json
+++ b/src/SnIoGui/appsettings.json
@@ -6,7 +6,9 @@
         "Name": "MyProject",
         "Url": "https://localhost:8080",
         "ApiKey": "........",
-        "ImportPath": "D:/import/myproject",
+        "HealthApiKey": "........",
+        "ImportPath": "D:\\import\\myproject",
+        "ExportPath": "D:\\export",
         "DbServer": "localhost",
         "DbName": "MyDatabase",
         "AdminUrl": "https://localhost:8080/admin"
