--- a/src/SnIoGui/appsettings.json
+++ b/src/SnIoGui/appsettings.json
@@ -1,6 +1,7 @@
 {
   "SnIoGuiSettings": {
     "SnIO": ".../SnIO.exe",
+    "Cleaner": ".../Cleaner.exe",
     "Targets": [
       {
         "Name": "MyProject",
